<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/imagenlogo"
            android:contentDescription="@string/imagen"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:id="@+id/imgAndroid"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar"
            android:textSize="28sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textColor="@color/color_titulo"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:id="@+id/txvTitulo" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_start"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:src="@drawable/soup" />
            
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrada"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:checked="false" />

                <RadioGroup
                    android:id="@+id/rg_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_day_soup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day_soup" />

                    <RadioButton
                        android:id="@+id/rb_azteca_soup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azteca_soup" />

                    <RadioButton
                        android:id="@+id/rb_mushroom_soup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mushroom_soup" />

                </RadioGroup>
            </LinearLayout>
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_middle_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:src="@drawable/middle_time"
                android:contentDescription="@string/coditos" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_middle_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entretiempo"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:checked="false" />

                <RadioGroup
                    android:id="@+id/rg_middle_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_arroz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arroz" />

                    <RadioButton
                        android:id="@+id/rb_coditos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coditos" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_entree"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:src="@drawable/entree"
                android:contentDescription="@string/coditos" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_entree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entree"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:checked="false" />

                <RadioGroup
                    android:id="@+id/rg_entree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_enchiladas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enchiladas" />

                    <RadioButton
                        android:id="@+id/rb_grilled_beef"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grilled_beef" />

                    <RadioButton
                        android:id="@+id/rb_filled_chillis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filled_chillis" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_beverages"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:src="@drawable/beverages"
                android:contentDescription="@string/coditos" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_beverages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverages"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:checked="false" />

                <RadioGroup
                    android:id="@+id/rg_beverages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day_water"
                        android:id="@+id/rb_day_water" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soda"
                        android:id="@+id/rb_soda" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_order"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp" />

            <Button
                android:id="@+id/btn_show_orders"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/show_order"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>